Trying to fix card hovers with z-index - couldn't get it working

--- a/_sass/application.scss
+++ b/_sass/application.scss
@@ -38,7 +38,7 @@ body {
   position: fixed;
   top: 0;
   width: 100%;
-  z-index: $layer-2;
+  z-index: $layer-10;
 
   .logo {
     display: inline-block;
