--- a/_sass/cards.scss
+++ b/_sass/cards.scss
@@ -73,10 +73,6 @@
       top: -10px;
     }
 
-    div {
-      padding: 0 10px;
-    }
-
     p {
       color: #fff;
       margin: 0 0 5px 0;
